# example-sort

./: .gitignore  .gitmodules  .oopignore  Makefile  README.md  build.gradle.kts  gradle.properties  gradle.properties.tpl  run.sh  settings.gradle.kts  settings.gradle.kts.tpl  sort_pure.c
c/: .oopignore  CMakeLists.txt  Makefile  otterop  quicksort
c/example/quicksort/: CMakeLists.txt  deps.mk  quicksort.c  quicksort.h
c/example/quicksort/service/: quicksort_service.c  quicksort_service.h
c/example/sort/: .oopignore  CMakeLists.manual.txt  CMakeLists.txt  sort.c  sort.h  sort_pure.c
c/example/sort/inheritance/: animal.c  animal.h  dog.c  dog.h
c/example/sort/service/: heapsort_service.c  heapsort_service.h  quicksort_service.c  quicksort_service.h  sort_service.c  sort_service.h
c/example/sort/service/pure/: heapsort_service.c  heapsort_service.h  quicksort_service.c  quicksort_service.h  sort_service.c  sort_service.h
c/example/sort/tree/: node.c  node.h
c/example/sort/tree/pure/: node.c  node.h
c/test/: CMakeLists.txt
c/test/tests/example/sort/: CMakeLists.txt  __tests_main.c
c/test/tests/example/sort/service/: test_heapsort_service.c  test_heapsort_service.h  test_quicksort_service.c  test_quicksort_service.h
config/: oopconfig.yml
dotnet/: .oopignore  Quicksort.cs  Quicksort.csproj  Sort.csproj  Sort.sln
dotnet/Example/Quicksort/: Quicksort.cs
dotnet/Example/Quicksort/Service/: QuicksortService.cs
dotnet/Example/Sort/: Sort.cs  SortPure.cs
dotnet/Example/Sort/Inheritance/: Animal.cs  Dog.cs
dotnet/Example/Sort/Service/: HeapsortService.cs  QuicksortService.cs  SortService.cs
dotnet/Example/Sort/Service/Pure/: HeapsortService.cs  QuicksortService.cs  SortService.cs
dotnet/Example/Sort/Tree/: Node.cs
dotnet/Example/Sort/Tree/Pure/: Node.cs
dotnet/src/: Sort.csproj  Sort.csproj.tpl
dotnet/src/Example/Sort/: .oopignore  SortPure.cs
dotnet/src/Example/Sort/Inheritance/: Dog.cs
dotnet/src/Example/Sort/Service/: QuicksortService.cs  SortService.cs
dotnet/src/Example/Sort/Service/Pure/: HeapsortService.cs
dotnet/src/Example/Sort/Tree/: Node.cs
dotnet/tests/: Sort.Tests.csproj  Sort.Tests.csproj.tpl
dotnet/tests/Example/Sort/Service/: TestHeapsortService.cs  TestQuicksortService.cs
go/: .gitignore  .oopignore  go  go.mod  go.mod.tpl  quicksort
go/example/quicksort/quicksort/: quicksort  quicksort.go
go/example/quicksort/service/quicksortservice/: quicksortservice.go
go/example/sort/: .oopignore  sortpure.go
go/example/sort/inheritance/: animal.go  dog.go
go/example/sort/inheritance/animal/: animal.go
go/example/sort/inheritance/dog/: dog.go
go/example/sort/service/: heapsortservice.go  quicksortservice.go  sortservice.go  testheapsortservice_test.go  testquicksortservice_test.go
go/example/sort/service/heapsortservice/: heapsortservice.go
go/example/sort/service/heapsortservice/pure/: heapsortservice.go
go/example/sort/service/pure/: heapsortservice.go  quicksortservice.go  sortservice.go
go/example/sort/service/quicksortservice/: quicksortservice.go
go/example/sort/service/quicksortservice/pure/: quicksortservice.go
go/example/sort/service/sortservice/: sortservice.go
go/example/sort/service/testheapsortservice/: testheapsortservice_test.go
go/example/sort/service/testquicksortservice/: testquicksortservice_test.go
go/example/sort/sort/: sort.go
go/example/sort/tree/: node.go
go/example/sort/tree/node/: node.go
go/example/sort/tree/node/pure/: node.go
go/example/sort/tree/pure/: node.go
python/: .oopignore  install.local.sh  install.published.sh  pyproject.toml  pytest.ini  quicksort.py
python/example/quicksort/: quicksort.py
python/example/quicksort/service/: quicksort_service.py
python/example/sort/: .oopignore  sort.py  sort_pure.py
python/example/sort/inheritance/: animal.py  dog.py
python/example/sort/service/: heapsort_service.py  quicksort_service.py  sort_service.py  test_heapsort_service.py  test_quicksort_service.py
python/example/sort/service/pure/: heapsort_service.py  quicksort_service.py  sort_service.py
python/example/sort/tree/: node.py
python/example/sort/tree/pure/: node.py
src/main/java/example/quicksort/: Quicksort.java
src/main/java/example/quicksort/service/: QuicksortService.java
src/main/java/example/sort/: Sort.java  SortPure.java
src/main/java/example/sort/inheritance/: Animal.java  Dog.java
src/main/java/example/sort/service/: HeapsortService.java  QuicksortService.java  SortService.java
src/main/java/example/sort/service/pure/: HeapsortService.java  QuicksortService.java  SortService.java
src/main/java/example/sort/tree/: Node.java
src/main/java/example/sort/tree/pure/: Node.java
src/test/java/example/sort/service/: TestHeapsortService.java  TestQuicksortService.java
ts/: .oopignore  package-lock.json  package.json  package.json.tpl  pnpm-lock.yaml  quicksort.js  quicksort.ts
ts/example/quicksort/: Quicksort.ts
ts/example/quicksort/service/: QuicksortService.ts
ts/example/sort/: .oopignore  Sort.ts  SortPure.ts
ts/example/sort/inheritance/: Animal.ts  Dog.ts
ts/example/sort/service/: HeapsortService.ts  QuicksortService.ts  SortService.ts  TestHeapsortService.test.ts  TestQuicksortService.test.ts
ts/example/sort/service/pure/: HeapsortService.ts  QuicksortService.ts  SortService.ts
ts/example/sort/tree/: Node.ts
ts/example/sort/tree/pure/: Node.ts
